# vinicultura-api

./: README.md  pyproject.toml
app/: main.py
app/Utils/: commercialization.py
app/api/: routes.py
app/db/: database.py  models.py
app/schemas/: schema.py
app/services/extractions/: base.py  commercialization.py  extractor.py  processing.py
app/services/populateDB/: commercialization.py
tests/: router.py
